# exim-fuzzer

./: .gitmodules  LocalMakefile  README.md  exim.conf  hooks.c  smtp.dict
fuzzer/: Cargo.toml
fuzzer/src/: executor.rs  input.rs  main.rs
fuzzer/src/mutators/: content.rs  copy.rs  create.rs  crossover.rs  delete.rs  generate.rs  mod.rs  repeat.rs  swap.rs  token.rs
fuzzer/src/tokens/: mod.rs  tokenstream.rs
fuzzer/src/tokens/mutators/: copy.rs  crossover.rs  delete.rs  dict.rs  flip.rs  interesting.rs  mod.rs  random.rs  repeat.rs  special.rs  split.rs  swap.rs  truncate.rs
patches/: base.diff  bug-1.diff  bug-2.diff
